design + input control : competition done

--- a/DesktopApp/src/edu/esprit/gui/FXMLAjouterCompetition.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLAjouterCompetition.fxml
@@ -6,8 +6,9 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="660.0" prefWidth="1105.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLAjouterCompetitionController">
+<AnchorPane id="AnchorPane" prefHeight="660.0" prefWidth="1105.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLAjouterCompetitionController">
    <children>
       <Label layoutX="91.0" layoutY="175.0" text="Nom" />
       <TextField fx:id="nom" layoutX="174.0" layoutY="170.0" prefHeight="31.0" prefWidth="218.0" promptText="Entrez nom de competition" />
@@ -15,11 +16,14 @@
       <Label layoutX="90.0" layoutY="331.0" text="Date Fin" />
       <DatePicker fx:id="date_debut" layoutX="174.0" layoutY="251.0" promptText="Date Début" />
       <DatePicker fx:id="date_fin" layoutX="174.0" layoutY="326.0" promptText="Date Fin" />
-      <Button fx:id="ajouter" layoutX="612.0" layoutY="510.0" mnemonicParsing="false" onAction="#btn_ajouter" text="Ajouter" />
-      <Button fx:id="annuler" layoutX="392.0" layoutY="510.0" mnemonicParsing="false" onAction="#btn_annuler" text="Annuler" />
+      <Button fx:id="ajouter" layoutX="612.0" layoutY="510.0" mnemonicParsing="false" onAction="#btn_ajouter" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Valider" />
+      <Button fx:id="annuler" layoutX="392.0" layoutY="510.0" mnemonicParsing="false" onAction="#btn_annuler" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Annuler" />
       <Label layoutX="90.0" layoutY="415.0" text="Lien" />
       <TextField fx:id="lien" layoutX="174.0" layoutY="410.0" prefHeight="31.0" prefWidth="218.0" promptText="Https://www.exemple.com" />
-      <Label layoutX="428.0" layoutY="77.0" text="Ajouter Competition" />
+      <Label layoutX="421.0" layoutY="77.0" text="Ajouter Competition">
+         <font>
+            <Font size="25.0" />
+         </font></Label>
       <Label layoutX="631.0" layoutY="186.0" text="Récompense" />
       <TextField fx:id="recompense" layoutX="754.0" layoutY="181.0" prefHeight="31.0" prefWidth="218.0" promptText="Récompense" />
       <Label layoutX="631.0" layoutY="272.0" text="Livre" />
