--- a/DesktopApp/src/edu/esprit/gui/styles/fxmlmaktabti.css
+++ b/DesktopApp/src/edu/esprit/gui/styles/fxmlmaktabti.css
@@ -23,3 +23,29 @@
 .icon {
     -fx-font-family: "FontAwesome";
 }
+.addbtn{
+    -fx-background-color: #5dbea3;
+    -fx-text-fill: white;
+    -fx-font-size: 16px;
+
+    -fx-background-radius: 8px;
+    -fx-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+}
+.modifybtn{
+    -fx-background-color: #ffcc00;
+    -fx-text-fill: white;
+    -fx-font-size: 16px;
+
+    -fx-background-radius: 8px;
+    -fx-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+.deletebtn{
+    -fx-background-color: #cc3300;
+    -fx-text-fill: white;
+    -fx-font-size: 16px;
+
+    -fx-background-radius: 8px;
+    -fx-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+}
