--- a/DesktopApp/src/edu/esprit/gui/styles/fxmlmaktabti.css
+++ b/DesktopApp/src/edu/esprit/gui/styles/fxmlmaktabti.css
@@ -24,7 +24,7 @@
     -fx-font-family: "FontAwesome";
 }
 .addbtn{
-    -fx-background-color: #5dbea3;
+    -fx-background-color: #034396;
     -fx-text-fill: white;
     -fx-font-size: 16px;
 
@@ -33,7 +33,7 @@
 
 }
 .modifybtn{
-    -fx-background-color: #ffcc00;
+    -fx-background-color: #002657;
     -fx-text-fill: white;
     -fx-font-size: 16px;
 
@@ -41,7 +41,7 @@
     -fx-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 .deletebtn{
-    -fx-background-color: #cc3300;
+    -fx-background-color: #f8a375;
     -fx-text-fill: white;
     -fx-font-size: 16px;
 
