--- a/DesktopApp/src/edu/esprit/gui/FXMLCompetition.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLCompetition.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -20,5 +22,10 @@
       <Button fx:id="btn_ajouter" layoutX="938.0" layoutY="144.0" mnemonicParsing="false" onAction="#ajouterCompetition" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="ajouter" />
       <Button fx:id="btn_modifier" layoutX="933.0" layoutY="263.0" mnemonicParsing="false" onAction="#modifierCompetition" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="modifier" />
       <Button fx:id="btn_supprimer" layoutX="938.0" layoutY="377.0" mnemonicParsing="false" onAction="#supprimerCompetition" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="supprimer" />
+      <ImageView fx:id="pdf" fitHeight="65.0" fitWidth="63.0" layoutX="862.0" layoutY="449.0" onMouseClicked="#TelechargerPDF">
+         <image>
+            <Image url="@images/pdf.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
