--- a/DesktopApp/src/edu/esprit/gui/Utilisateur.fxml
+++ b/DesktopApp/src/edu/esprit/gui/Utilisateur.fxml
@@ -141,7 +141,7 @@
             <Pane fx:id="pnlMenus" prefHeight="200.0" prefWidth="200.0" />
             <Pane fx:id="pnlOverview" prefHeight="554.0" prefWidth="793.0">
                <children>
-                  <TextField layoutX="590.0" layoutY="47.0" prefHeight="27.0" prefWidth="183.0" promptText="search" style="-fx-background-color: #02030A; -fx-border-color: #B7C3D7; -fx-border-radius: 2em;" />
+                  <TextField fx:id="searchh" layoutX="590.0" layoutY="47.0" onKeyTyped="#search" prefHeight="27.0" prefWidth="183.0" promptText="search" style="-fx-background-color: #02030A; -fx-border-color: #B7C3D7; -fx-border-radius: 2em;" />
                   <Label layoutX="57.0" layoutY="25.0" text="Liste des Utilisateurs" textFill="#e7e5e5">
                      <font>
                         <Font size="24.0" />
@@ -202,6 +202,7 @@
                   <Button fx:id="cat_update" layoutX="117.0" layoutY="470.0" mnemonicParsing="false" onAction="#updateuser" prefHeight="25.0" prefWidth="91.0" text="Mettre à jours" />
                   <Button fx:id="cat_del" layoutX="232.0" layoutY="470.0" mnemonicParsing="false" onAction="#deleteuser" text="Supprimer" />
                   <ListView fx:id="useview" layoutX="441.0" layoutY="164.0" prefHeight="255.0" prefWidth="299.0" />
+                  <Button fx:id="reset" layoutX="119.0" layoutY="514.0" mnemonicParsing="false" onAction="#onreset" prefHeight="25.0" prefWidth="91.0" text="Reset" />
                </children>
             </Pane>
          </children>
