--- a/DesktopApp/src/edu/esprit/gui/Register.fxml
+++ b/DesktopApp/src/edu/esprit/gui/Register.fxml
@@ -11,12 +11,12 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #171717;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.RegisterController">
    <left>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="root" stylesheets="@styles/fxmlmaktabti.css" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane layoutX="-27.0" layoutY="78.0" prefHeight="400.0" prefWidth="626.0">
+            <AnchorPane layoutX="-27.0" layoutY="85.0" prefHeight="393.0" prefWidth="626.0" styleClass="root" stylesheets="@styles/fxmlmaktabti.css">
                <children>
-                  <Button fx:id="login" layoutX="239.0" layoutY="296.0" mnemonicParsing="false" onAction="#Registration" prefHeight="33.0" prefWidth="74.0" style="-fx-background-color: #ffc900;" text="Log In" />
-                  <Button fx:id="forgotpasswd" layoutX="357.0" layoutY="296.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="73.0" style="-fx-background-color: #ffc900;" text="Reset" />
+                  <Button fx:id="login" layoutX="239.0" layoutY="296.0" mnemonicParsing="false" onAction="#Registration" prefHeight="37.0" prefWidth="95.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Register" />
+                  <Button fx:id="forgotpasswd" layoutX="357.0" layoutY="296.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="94.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Reset" />
                   <VBox layoutX="317.0" layoutY="14.0" prefHeight="166.0" prefWidth="153.0" spacing="21.0">
                      <children>
                         <TextField fx:id="nom" layoutX="10.0" layoutY="10.0" />
@@ -29,32 +29,32 @@
                   </VBox>
                   <VBox layoutX="202.0" layoutY="14.0" prefHeight="264.0" prefWidth="91.0" spacing="25.0">
                      <children>
-                        <Label text="Nom" textFill="WHITE">
+                        <Label styleClass="txt" stylesheets="@styles/fxmlmaktabti.css" text="Nom" textFill="#161616">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="10.0" text="Prenom" textFill="WHITE">
+                        <Label layoutX="10.0" layoutY="10.0" styleClass="txt" stylesheets="@styles/fxmlmaktabti.css" text="Prenom" textFill="#1d1d1d">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="27.0" text="Email" textFill="WHITE">
+                        <Label layoutX="10.0" layoutY="27.0" text="Email" textFill="#0d0d0d">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="100.0" text="Mot de passe" textFill="WHITE">
+                        <Label layoutX="10.0" layoutY="100.0" text="Mot de passe" textFill="#020202">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="145.0" text="Telephone" textFill="WHITE">
+                        <Label layoutX="10.0" layoutY="145.0" text="Telephone" textFill="#0b0b0b">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="190.0" text="Role" textFill="WHITE">
+                        <Label layoutX="10.0" layoutY="190.0" text="Role" textFill="#0d0d0d">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
@@ -63,7 +63,7 @@
                   </VBox>
                </children>
             </AnchorPane>
-            <Label layoutX="215.0" layoutY="49.0" text="Registration Form" textFill="#ddb120">
+            <Label layoutX="215.0" layoutY="49.0" styleClass="txt" stylesheets="@styles/fxmlmaktabti.css" text="Registration Form" textFill="#121211">
                <font>
                   <Font name="Bell MT Italic" size="24.0" />
                </font>
