--- a/DesktopApp/src/edu/esprit/gui/FXMLCompetition.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLCompetition.fxml
@@ -3,28 +3,37 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="660.0" prefWidth="1105.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLCompetitionController">
+<AnchorPane id="AnchorPane" prefHeight="502.0" prefWidth="649.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLCompetitionController">
    <children>
-      <ListView fx:id="competition_list" layoutX="35.0" layoutY="109.0" prefHeight="503.0" prefWidth="814.0">
+      <ListView fx:id="competition_list" layoutX="51.0" layoutY="150.0" prefHeight="324.0" prefWidth="737.0">
          <effect>
             <DropShadow />
-         </effect></ListView>
+         </effect>
+      </ListView>
       <Label fx:id="competition_label" layoutX="289.0" layoutY="45.0" text="Liste des competitions">
          <font>
             <Font size="29.0" />
-         </font></Label>
-      <Button fx:id="btn_ajouter" layoutX="938.0" layoutY="144.0" mnemonicParsing="false" onAction="#ajouterCompetition" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="ajouter" />
-      <Button fx:id="btn_modifier" layoutX="933.0" layoutY="263.0" mnemonicParsing="false" onAction="#modifierCompetition" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="modifier" />
-      <Button fx:id="btn_supprimer" layoutX="938.0" layoutY="377.0" mnemonicParsing="false" onAction="#supprimerCompetition" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="supprimer" />
-      <ImageView fx:id="pdf" fitHeight="65.0" fitWidth="63.0" layoutX="862.0" layoutY="449.0" onMouseClicked="#TelechargerPDF">
+         </font>
+      </Label>
+      <Button fx:id="btn_ajouter" layoutX="838.0" layoutY="147.0" mnemonicParsing="false" onAction="#ajouterCompetition" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="ajouter" />
+      <Button fx:id="btn_modifier" layoutX="830.0" layoutY="245.0" mnemonicParsing="false" onAction="#modifierCompetition" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="modifier" />
+      <Button fx:id="btn_supprimer" layoutX="827.0" layoutY="349.0" mnemonicParsing="false" onAction="#supprimerCompetition" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="supprimer" />
+      <ImageView fx:id="pdf" fitHeight="65.0" fitWidth="63.0" layoutX="807.0" layoutY="457.0" onMouseClicked="#TelechargerPDF">
          <image>
             <Image url="@images/pdf.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="search" layoutX="66.0" layoutY="107.0" onKeyTyped="#chercherCompetition" promptText="rechercher" />
+      <ImageView fitHeight="31.0" fitWidth="31.0" layoutX="222.0" layoutY="107.0">
+         <image>
+            <Image url="@images/search.png" />
          </image>
       </ImageView>
    </children>
