--- a/DesktopApp/src/edu/esprit/gui/FXMLModifierEvenement.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLModifierEvenement.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="660.0" prefWidth="1105.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLModifierEvenementController">
+<AnchorPane id="AnchorPane" prefHeight="660.0" prefWidth="1105.0" styleClass="mainFxmlClass" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLModifierEvenementController">
    <children>
-      <VBox layoutX="105.0" layoutY="68.0" prefHeight="654.0" prefWidth="400.0" spacing="30.0">
+      <VBox layoutX="105.0" layoutY="68.0" prefHeight="515.0" prefWidth="400.0" spacing="30.0">
          <children>
             <Label fx:id="lbl_nom" styleClass="label1" stylesheets="@styles/crud.css" text="Nom:" />
             <Label fx:id="lbl_date" styleClass="label1" stylesheets="@styles/crud.css" text="Date:" />
@@ -26,14 +26,14 @@
       <TextField fx:id="heureField" layoutX="238.0" layoutY="234.0" promptText="HH/mm" stylesheets="@styles/crud.css" />
       <TextField fx:id="lieuField" layoutX="238.0" layoutY="313.0" promptText="Entrer lieu" stylesheets="@styles/crud.css" />
       <TextField fx:id="descriptionField" layoutX="238.0" layoutY="395.0" promptText="Entrer descrip de l'event" stylesheets="@styles/crud.css" />
-      <ListView fx:id="auteurView" layoutX="774.0" layoutY="92.0" prefHeight="230.0" prefWidth="278.0" />
+      <ListView fx:id="auteurView" layoutX="773.0" layoutY="79.0" prefHeight="230.0" prefWidth="278.0" />
       <Label layoutX="858.0" layoutY="21.0" prefHeight="56.0" prefWidth="125.0" stylesheets="@styles/crud.css" text="Auteur">
          <styleClass>
             <String fx:value="label2" />
             <String fx:value="label2" />
          </styleClass>
       </Label>
-      <Button fx:id="modifevent" layoutX="640.0" layoutY="636.0" mnemonicParsing="false" onAction="#modifevent" prefHeight="72.0" prefWidth="125.0" stylesheets="@styles/crud.css" text="Modifier Event" />
+      <Button fx:id="modifevent" layoutX="564.0" layoutY="572.0" mnemonicParsing="false" onAction="#modifevent" prefHeight="72.0" prefWidth="125.0" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Modifier Event" />
       <ListView fx:id="livreView" layoutX="773.0" layoutY="414.0" prefHeight="230.0" prefWidth="278.0" />
       <Label layoutX="870.0" layoutY="341.0" prefHeight="56.0" prefWidth="125.0" stylesheets="@styles/crud.css" text="Livre">
          <styleClass>
@@ -41,7 +41,7 @@
             <String fx:value="label2" />
          </styleClass>
       </Label>
-      <Button fx:id="reset" layoutX="505.0" layoutY="636.0" mnemonicParsing="false" onAction="#reset" prefHeight="72.0" prefWidth="111.0" stylesheets="@styles/crud.css" text="Annuler" />
+      <Button fx:id="reset" layoutX="375.0" layoutY="572.0" mnemonicParsing="false" onAction="#reset" prefHeight="72.0" prefWidth="111.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Reset" />
       <TextField fx:id="ticketField" layoutX="238.0" layoutY="472.0" promptText="Entrer nb de ticket" stylesheets="@styles/crud.css" />
    </children>
 </AnchorPane>
