--- a/DesktopApp/src/edu/esprit/gui/FXMLReservation.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLReservation.fxml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLReservationController">
-    <stylesheets>
-        <URL value="@/edu/esprit/gui/styles/crud.css"/>
-    </stylesheets>
+<AnchorPane id="AnchorPane" prefHeight="486.0" prefWidth="770.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLReservationController">
+   <children>
+      <Button fx:id="reserver_btn" layoutX="322.0" layoutY="325.0" mnemonicParsing="false" onAction="#reserver" prefHeight="74.0" prefWidth="168.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Reserver" />
+      <Spinner fx:id="num_ticket" layoutX="417.0" layoutY="178.0" prefHeight="47.0" prefWidth="206.0" />
+      <Label layoutX="141.0" layoutY="186.0" text="Nombre de tickets:">
+         <font>
+            <Font name="Arial Bold" size="26.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
