--- a/DesktopApp/src/edu/esprit/gui/styles/crud.css
+++ b/DesktopApp/src/edu/esprit/gui/styles/crud.css
@@ -10,11 +10,13 @@ and open the template in the editor.
 */
 
 
-.label{
-    -fx-text-fill: linear-gradient(to bottom, #FFFFFF, deepskyblue);
-    -fx-font-size:40px;
-
+.label {
+    color: black;
+    font-weight: bold;
+    font-size: 24px;
+    font-family: 'Helvetica Neue', sans-serif;
 }
+
 .button1{
     -fx-background-color: #FF0000;
     -fx-text-fill: white;
@@ -70,8 +72,8 @@ and open the template in the editor.
     -fx-padding: 10px;
     -fx-background-color: transparent;
     -fx-fill: linear-gradient(to bottom, #4169E1, #8B4513);
-    
-    
+
+
 }
 
 
