--- a/DesktopApp/src/edu/esprit/gui/Register.fxml
+++ b/DesktopApp/src/edu/esprit/gui/Register.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -24,7 +26,12 @@
                         <TextField fx:id="email" layoutX="10.0" layoutY="10.0" />
                         <PasswordField fx:id="password" />
                         <TextField fx:id="numtel" layoutX="10.0" layoutY="10.0" />
-                        <TextField fx:id="role" layoutX="10.0" layoutY="10.0" />
+                        <MenuButton fx:id="menurole" mnemonicParsing="false" prefHeight="25.0" prefWidth="155.0" style="-fx-background-color: white;">
+                          <items>
+                            <MenuItem fx:id="client" mnemonicParsing="false" onAction="#clientrole" text="Client" />
+                            <MenuItem fx:id="auteur" mnemonicParsing="false" onAction="#auteurrole" text="Auteur" />
+                          </items>
+                        </MenuButton>
                      </children>
                   </VBox>
                   <VBox layoutX="202.0" layoutY="14.0" prefHeight="264.0" prefWidth="91.0" spacing="25.0">
