--- a/DesktopApp/src/edu/esprit/gui/Utilisateur.fxml
+++ b/DesktopApp/src/edu/esprit/gui/Utilisateur.fxml
@@ -25,7 +25,7 @@
             </Label>
             <ImageView fitHeight="17.0" fitWidth="16.0" layoutX="782.0" layoutY="53.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/search.jpeg" />
+                  <Image url="@images/search.png" />
                </image>
             </ImageView>
             <VBox layoutX="181.0" layoutY="164.0" prefHeight="144.0" prefWidth="91.0" spacing="25.0">
@@ -77,6 +77,12 @@
             <Button fx:id="cat_del" layoutX="218.0" layoutY="506.0" mnemonicParsing="false" onAction="#deleteuser" prefHeight="37.0" prefWidth="131.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Supprimer" />
             <ListView fx:id="useview" layoutX="525.0" layoutY="108.0" prefHeight="381.0" prefWidth="379.0" />
             <Button fx:id="reset" layoutX="377.0" layoutY="506.0" mnemonicParsing="false" onAction="#onreset" prefHeight="25.0" prefWidth="91.0" style="-fx-background-color: #FFD700;" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Reset" />
+            <Button fx:id="excel" layoutX="600.0" layoutY="506.0" mnemonicParsing="false" onAction="#excelfile" prefHeight="37.0" prefWidth="153.0" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Generate" />
+            <ImageView fitHeight="36.0" fitWidth="30.0" layoutX="608.0" layoutY="510.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/excell.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
    </children>
