--- a/DesktopApp/src/edu/esprit/gui/FXMLAjouter.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLAjouter.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.image.ImageView?>
-
 
 <AnchorPane id="AnchorPane" prefHeight="660.0" prefWidth="1105.0" styleClass="mainFxmlClass" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLAjouterController">
    <children>
@@ -45,6 +45,12 @@
       </Label>
       <Button fx:id="reset" layoutX="414.0" layoutY="573.0" mnemonicParsing="false" onAction="#reset" prefHeight="72.0" prefWidth="111.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Reset" />
       <TextField fx:id="ticketField" layoutX="238.0" layoutY="472.0" promptText="Entrer nb de ticket" stylesheets="@styles/crud.css" />
+      <ImageView fitHeight="56.0" fitWidth="69.0" layoutX="28.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView layoutX="15.0" layoutY="18.0" onMouseClicked="#back">
+         <image>
+            <Image url="@images/arrow.png" />
+         </image>
+      </ImageView>
       
 
    </children>
