--- a/DesktopApp/src/edu/esprit/gui/FXMLReservation.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLReservation.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -15,5 +17,17 @@
             <Font name="Arial Bold" size="26.0" />
          </font>
       </Label>
+      <ImageView fitHeight="61.0" fitWidth="76.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView layoutX="22.0" layoutY="14.0" onMouseClicked="#back">
+         <image>
+            <Image url="@images/arrow.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="61.0" fitWidth="69.0" layoutX="589.0" layoutY="332.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="84.0" fitWidth="89.0" layoutX="545.0" layoutY="321.0" onMouseClicked="#downloadTickets">
+         <image>
+            <Image url="@images/pdf.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
