--- a/DesktopApp/src/edu/esprit/gui/styles/fxmlmaktabti.css
+++ b/DesktopApp/src/edu/esprit/gui/styles/fxmlmaktabti.css
@@ -30,7 +30,13 @@
 
     -fx-background-radius: 8px;
     -fx-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    -fx-cursor:hand;
 
+}
+.addbtn::hover{
+    -fx-background-color: #ffffff;
+    -fx-text-fill: #034396;
+    -fx-font-size: 16px;
 }
 .modifybtn{
     -fx-background-color: #002657;
@@ -39,6 +45,10 @@
 
     -fx-background-radius: 8px;
     -fx-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    -fx-cursor:hand;
+}
+.modifybtn::hover{
+    -fx-background-color:linear-gradient (to bottom right, #3862c2, #4284d0);
 }
 .deletebtn{
     -fx-background-color: #f8a375;
@@ -47,5 +57,10 @@
 
     -fx-background-radius: 8px;
     -fx-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    -fx-cursor:hand;
+
+}
+.deletebtn::hover{
+    -fx-background-color:linear-gradient (to bottom right, #3862c2, #4284d0);
 
 }
