--- a/DesktopApp/src/edu/esprit/gui/Authentification.fxml
+++ b/DesktopApp/src/edu/esprit/gui/Authentification.fxml
@@ -28,7 +28,7 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Label>
-                  <Label text="Password" textFill="#ffc900">
+                  <Label layoutX="10.0" layoutY="10.0" text="Password">
                      <font>
                         <Font name="System Bold" size="20.0" />
                      </font>
