--- a/DesktopApp/src/edu/esprit/gui/Authentification.fxml
+++ b/DesktopApp/src/edu/esprit/gui/Authentification.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -18,7 +19,7 @@
             <VBox layoutX="290.0" layoutY="164.0" prefHeight="73.0" prefWidth="147.0">
                <children>
                   <TextField fx:id="username" prefHeight="3.0" prefWidth="100.0" />
-                  <TextField fx:id="password" prefHeight="1.0" prefWidth="100.0" />
+                  <PasswordField fx:id="password" />
                </children>
             </VBox>
             <VBox layoutX="170.0" layoutY="168.0" prefHeight="79.0" prefWidth="100.0">
