--- a/DesktopApp/src/edu/esprit/gui/Register.fxml
+++ b/DesktopApp/src/edu/esprit/gui/Register.fxml
@@ -17,8 +17,8 @@
          <children>
             <AnchorPane layoutX="-27.0" layoutY="85.0" prefHeight="393.0" prefWidth="626.0" styleClass="root" stylesheets="@styles/fxmlmaktabti.css">
                <children>
-                  <Button fx:id="login" layoutX="239.0" layoutY="296.0" mnemonicParsing="false" onAction="#Registration" prefHeight="37.0" prefWidth="95.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Register" />
-                  <Button fx:id="forgotpasswd" layoutX="357.0" layoutY="296.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="94.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Reset" />
+                  <Button fx:id="login" layoutX="246.0" layoutY="325.0" mnemonicParsing="false" onAction="#Registration" prefHeight="37.0" prefWidth="95.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Register" />
+                  <Button fx:id="forgotpasswd" layoutX="362.0" layoutY="325.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="94.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Reset" />
                   <VBox layoutX="317.0" layoutY="14.0" prefHeight="166.0" prefWidth="153.0" spacing="21.0">
                      <children>
                         <TextField fx:id="nom" layoutX="10.0" layoutY="10.0" />
@@ -34,9 +34,9 @@
                         </MenuButton>
                      </children>
                   </VBox>
-                  <VBox layoutX="202.0" layoutY="14.0" prefHeight="264.0" prefWidth="91.0" spacing="25.0">
+                  <VBox layoutX="202.0" layoutY="14.0" prefHeight="299.0" prefWidth="91.0" spacing="25.0">
                      <children>
-                        <Label styleClass="txt" stylesheets="@styles/fxmlmaktabti.css" text="Nom" textFill="#161616">
+                        <Label prefHeight="28.0" prefWidth="33.0" styleClass="txt" stylesheets="@styles/fxmlmaktabti.css" text="Nom" textFill="#161616">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
@@ -56,7 +56,7 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Label>
-                        <Label layoutX="10.0" layoutY="145.0" text="Telephone" textFill="#0b0b0b">
+                        <Label layoutX="10.0" layoutY="145.0" prefHeight="24.0" prefWidth="70.0" text="Telephone" textFill="#0b0b0b">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
