--- a/DesktopApp/src/edu/esprit/gui/FXMLModifierEvenement.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLModifierEvenement.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
@@ -35,15 +36,15 @@
             <String fx:value="label2" />
          </styleClass>
       </Label>
-      <Button fx:id="modifevent" layoutX="564.0" layoutY="572.0" mnemonicParsing="false" onAction="#modifevent" prefHeight="72.0" prefWidth="125.0" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Modifier Event" />
+      <Button fx:id="modifevent" layoutX="564.0" layoutY="572.0" mnemonicParsing="false" onAction="#modifevent" prefHeight="72.0" prefWidth="145.0" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Modifier Event" />
       <ListView fx:id="livreView" layoutX="773.0" layoutY="414.0" prefHeight="230.0" prefWidth="278.0" />
-      <Label layoutX="870.0" layoutY="341.0" prefHeight="56.0" prefWidth="125.0" stylesheets="@styles/crud.css" text="Livre">
+      <Label layoutX="858.0" layoutY="341.0" prefHeight="56.0" prefWidth="125.0" stylesheets="@styles/crud.css" text="Livre">
          <styleClass>
             <String fx:value="label2" />
             <String fx:value="label2" />
          </styleClass>
       </Label>
-      <Button fx:id="reset" layoutX="375.0" layoutY="572.0" mnemonicParsing="false" onAction="#reset" prefHeight="72.0" prefWidth="111.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Reset" />
+      <Button fx:id="reset" layoutX="347.0" layoutY="572.0" mnemonicParsing="false" onAction="#reset" prefHeight="72.0" prefWidth="139.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Reset" />
       <TextField fx:id="ticketField" layoutX="238.0" layoutY="472.0" promptText="Entrer nb de ticket" stylesheets="@styles/crud.css" />
       <ImageView fitHeight="63.0" fitWidth="69.0" layoutX="21.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView layoutX="14.0" layoutY="8.0" onMouseClicked="#back">
@@ -51,5 +52,10 @@
             <Image url="@images/arrow.png" />
          </image>
       </ImageView>
+      <FontAwesomeIconView glyphName="GLOBE" layoutX="400.0" layoutY="338.0" size="18" />
+      <FontAwesomeIconView glyphName="USER" layoutX="834.0" layoutY="58.0" size="30" />
+      <FontAwesomeIconView glyphName="BOOK" layoutX="832.0" layoutY="379.0" size="30" />
+      <FontAwesomeIconView fill="WHITE" glyphName="EDIT" layoutX="565.0" layoutY="616.0" size="20" />
+      <FontAwesomeIconView fill="#fffdfd" glyphName="CLOSE" layoutX="379.0" layoutY="615.0" size="20" />
    </children>
 </AnchorPane>
