--- a/DesktopApp/src/edu/esprit/gui/FXMLReservation.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLReservation.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
@@ -10,9 +11,9 @@
 
 <AnchorPane id="AnchorPane" prefHeight="486.0" prefWidth="770.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLReservationController">
    <children>
-      <Button fx:id="reserver_btn" layoutX="322.0" layoutY="325.0" mnemonicParsing="false" onAction="#reserver" prefHeight="74.0" prefWidth="168.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Reserver" />
-      <Spinner fx:id="num_ticket" layoutX="417.0" layoutY="178.0" prefHeight="47.0" prefWidth="206.0" />
-      <Label layoutX="141.0" layoutY="186.0" text="Nombre de tickets:">
+      <Button fx:id="reserver_btn" layoutX="198.0" layoutY="326.0" mnemonicParsing="false" onAction="#reserver" prefHeight="74.0" prefWidth="168.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Reserver" />
+      <Spinner fx:id="num_ticket" layoutX="385.0" layoutY="178.0" prefHeight="47.0" prefWidth="206.0" />
+      <Label layoutX="110.0" layoutY="186.0" text="Nombre de tickets:">
          <font>
             <Font name="Arial Bold" size="26.0" />
          </font>
@@ -24,10 +25,15 @@
          </image>
       </ImageView>
       <ImageView fitHeight="61.0" fitWidth="69.0" layoutX="589.0" layoutY="332.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="84.0" fitWidth="89.0" layoutX="545.0" layoutY="321.0" onMouseClicked="#downloadTickets">
-         <image>
-            <Image url="@images/pdf.png" />
-         </image>
-      </ImageView>
+      <Button fx:id="but_pdf" layoutX="514.0" layoutY="329.0" mnemonicParsing="false" onAction="#downloadpdf">
+         <graphic>
+            <ImageView fitHeight="57.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/pdf.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
+      <FontAwesomeIconView glyphName="TICKET" layoutX="55.0" layoutY="220.0" size="50" text="" />
    </children>
 </AnchorPane>
