--- a/DesktopApp/src/edu/esprit/gui/FXMLTicket.fxml
+++ b/DesktopApp/src/edu/esprit/gui/FXMLTicket.fxml
@@ -7,30 +7,41 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="1103.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLTicketController">
+<AnchorPane id="AnchorPane" prefHeight="200.0" prefWidth="500.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.FXMLTicketController">
    
    <children>
-      <ImageView fitHeight="445.0" fitWidth="1105.0" layoutX="-2.0">
-         <image>
-            <Image url="@images/ticket.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="90.0" layoutY="256.0" text="Label" />
-      <Label fx:id="auteur" layoutX="373.0" layoutY="241.0" text="Label" textFill="#eeeeee">
-         <font>
-            <Font name="System Bold" size="21.0" />
-         </font>
-      </Label>
-      <Label fx:id="date" layoutX="105.0" layoutY="249.0" text="Label" textFill="#c61bc0">
-         <font>
-            <Font name="System Bold" size="39.0" />
-         </font>
-      </Label>
-      <Label fx:id="heure" layoutX="174.0" layoutY="305.0" text="Label" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="23.0" />
-         </font></Label>
-      <Pane fx:id="ticketPane" layoutX="-2.0" prefHeight="445.0" prefWidth="1105.0" />
-      <ImageView fx:id="qrCodeImageView" fitHeight="69.0" fitWidth="83.0" layoutX="679.0" layoutY="280.0" opacity="0.49" pickOnBounds="true" preserveRatio="true" rotate="-23.0" />
+      <Pane layoutX="-2.0" prefHeight="200.0" prefWidth="529.0">
+         <children>
+            <Pane fx:id="ticketPane" prefHeight="200.0" prefWidth="527.0">
+               <children>
+                  <ImageView fitHeight="200.0" fitWidth="527.0">
+                     <image>
+                        <Image url="@images/ticket.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="qrCodeImageView" fitHeight="34.0" fitWidth="43.0" layoutX="327.0" layoutY="127.0" opacity="0.4" pickOnBounds="true" preserveRatio="true" rotate="-23.2" />
+                  <Label fx:id="heure" layoutX="61.0" layoutY="155.0" text="Label" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="auteur" layoutX="166.0" layoutY="85.0" text="Label" textFill="#eeeeee">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="event" layoutX="147.0" layoutY="133.0" text="Label" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font></Label>
+                  <Label fx:id="date" layoutX="29.0" layoutY="116.0" prefHeight="56.0" prefWidth="111.0" text="Label" textFill="#c61bc0">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
