--- a/DesktopApp/src/edu/esprit/gui/ConsulterFidelite.fxml
+++ b/DesktopApp/src/edu/esprit/gui/ConsulterFidelite.fxml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.ConsulterFideliteController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.ConsulterFideliteController">
    <children>
-      <Label layoutX="38.0" layoutY="65.0" text="Votre fidelite est de type :" />
-      <TextField fx:id="a" editable="false" layoutX="230.0" layoutY="60.0" prefHeight="31.0" prefWidth="74.0" />
+      <Label layoutX="38.0" layoutY="65.0" text="Votre fidelite est de type :">
+         <font>
+            <Font name="System Bold" size="19.0" />
+         </font></Label>
+      <TextField fx:id="a" editable="false" layoutX="283.0" layoutY="64.0" prefHeight="31.0" prefWidth="74.0" />
       <TextField fx:id="b" editable="false" layoutX="14.0" layoutY="147.0" prefHeight="126.0" prefWidth="538.0" />
    </children>
 </AnchorPane>
