--- a/DesktopApp/src/edu/esprit/gui/OffreAjout.fxml
+++ b/DesktopApp/src/edu/esprit/gui/OffreAjout.fxml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.OffreAjoutController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@styles/fxmlmaktabti.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.esprit.gui.OffreAjoutController">
    <children>
-      <TextField fx:id="a" layoutX="335.0" layoutY="59.0" />
-      <TextField fx:id="b" layoutX="335.0" layoutY="140.0" />
-      <ListView fx:id="list_livre" layoutX="14.0" layoutY="23.0" prefHeight="278.0" prefWidth="253.0" />
-      <Button layoutX="497.0" layoutY="232.0" mnemonicParsing="false" onAction="#ajouteroffre" text="Ajouter" />
-      <Button layoutX="358.0" layoutY="232.0" mnemonicParsing="false" onAction="#modifierOffre" text="Modifier" />
+      <TextField fx:id="a" layoutX="404.0" layoutY="59.0" />
+      <TextField fx:id="b" layoutX="404.0" layoutY="140.0" />
+      <ListView fx:id="list_livre" layoutX="14.0" layoutY="23.0" prefHeight="278.0" prefWidth="253.0" stylesheets="@styles/fxmlmaktabti.css" />
+      <Button layoutX="468.0" layoutY="232.0" mnemonicParsing="false" onAction="#ajouteroffre" prefHeight="40.0" prefWidth="90.0" styleClass="addbtn" stylesheets="@styles/fxmlmaktabti.css" text="Ajouter" />
+      <Button layoutX="319.0" layoutY="232.0" mnemonicParsing="false" onAction="#modifierOffre" prefHeight="40.0" prefWidth="90.0" styleClass="modifybtn" stylesheets="@styles/fxmlmaktabti.css" text="Modifier" />
+      <Button layoutX="396.0" layoutY="310.0" mnemonicParsing="false" onAction="#Envoyermail" prefHeight="40.0" prefWidth="90.0" styleClass="deletebtn" stylesheets="@styles/fxmlmaktabti.css" text="Email" />
+      <Label layoutX="276.0" layoutY="64.0" text="Pourcentage-offre:" />
+      <Label layoutX="298.0" layoutY="145.0" text="Prix-Postsolde:" />
    </children>
 </AnchorPane>
